# Semantic_Memory_Operating_System_SMOS

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml  requirements.txt  smithery.yaml
benchmarks/: repository_ingestion_benchmark.py
reports/: perf_engineering_report_2026-06-22.md  qa_benchmark_report_2026-06-22-hardened.md  qa_benchmark_report_2026-06-22.md  scale_benchmark_report_2026-06-22.md  token_efficiency_testrun_2026-06-22.md
smos/: __init__.py  __main__.py  server.py
smos/compression/: context_builder.py
smos/install/: cli.py
smos/llm/: client.py  summarizer.py
smos/memory/: embeddings.py  lifecycle.py  schemas.py  vector_store.py
smos/tools/: file_tools.py  ingest_tools.py  semantic_tools.py
tests/: bench_b6b7b8.py  bench_compression.py  bench_mcp_tools.py  bench_performance.py  bench_retrieval.py  bench_security.py  bench_summarizer.py  conftest.py  scale_s1_corpus.py  scale_s2_retrieval.py  scale_s3_lifecycle.py  scale_s4_compression.py  scale_s5_failures.py  test_file_tools.py  test_ingestion.py  test_semantic_tools.py  test_summarizer.py  test_vector_store.py
